# arfiOS-m5stickc

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.github/workflows/: ci.yml  release.yml
components/arfi_apps/: CMakeLists.txt
components/arfi_apps/about/: AboutApp.cpp
components/arfi_apps/cube3d/: Cube3DApp.cpp
components/arfi_apps/diagnostics/: DiagnosticsApp.cpp
components/arfi_apps/flappy/: FlappyBirdApp.cpp
components/arfi_apps/imu_level/: ImuLevelApp.cpp
components/arfi_apps/include/arfi/apps/: AboutApp.hpp  AppIcons.hpp  Cube3DApp.hpp  DiagnosticsApp.hpp  FlappyBirdApp.hpp  ImuLevelApp.hpp  IrSweepApp.hpp  LauncherApp.hpp  PomodoroApp.hpp  RestReaderApp.hpp  SettingsApp.hpp
components/arfi_apps/ir_sweep/: IrSweepApp.cpp
components/arfi_apps/launcher/: LauncherApp.cpp
components/arfi_apps/pomodoro/: PomodoroApp.cpp
components/arfi_apps/rest_reader/: RestReaderApp.cpp
components/arfi_apps/settings/: SettingsApp.cpp
components/arfi_core/: CMakeLists.txt
components/arfi_core/include/arfi/core/: App.hpp  AppIcon.hpp  AppManager.hpp  AppRegistry.hpp  InputEvent.hpp  (+1 more)
components/arfi_core/src/: AppManager.cpp  AppRegistry.cpp
components/arfi_hal/: CMakeLists.txt
components/arfi_hal/src/: M5StickCPlusDisplay.cpp  M5StickCPlusImu.cpp  M5StickCPlusIr.cpp  M5StickCPlusPower.cpp
components/arfi_runtime/: CMakeLists.txt
components/arfi_runtime/src/: System.cpp
components/arfi_services/: CMakeLists.txt
components/arfi_services/include/arfi/services/: DisplayService.hpp  ImuService.hpp  InputService.hpp  IrService.hpp  PowerService.hpp  RestService.hpp  SettingsService.hpp  WifiService.hpp
components/arfi_services/src/: DisplayService.cpp  ImuService.cpp  InputService.cpp  IrService.cpp  PowerService.cpp  RestService.cpp  SettingsService.cpp  WifiService.cpp
components/arfi_ui/: CMakeLists.txt
components/arfi_ui/src/: Canvas.cpp  CoverFlowRenderer.cpp  ListRenderer.cpp
docs/: APP_MODEL.md  ARCHITECTURE.md  CI_CD.md  HARDWARE.md  INPUT_MODEL.md  PLATFORMIO.md  ROADMAP.md
main/: CMakeLists.txt  main.cpp
scripts/: platformio_load_env.py
(+12 files in other folders)
