idf_component_register(
    SRCS
        "launcher/LauncherApp.cpp"
        "settings/SettingsApp.cpp"
        "diagnostics/DiagnosticsApp.cpp"
        "pomodoro/PomodoroApp.cpp"
        "imu_level/ImuLevelApp.cpp"
        "ir_sweep/IrSweepApp.cpp"
        "flappy/FlappyBirdApp.cpp"
        "rest_reader/RestReaderApp.cpp"
        "about/AboutApp.cpp"
    INCLUDE_DIRS
        "include"
        "launcher"
        "settings"
        "diagnostics"
        "pomodoro"
        "imu_level"
        "ir_sweep"
        "flappy"
        "rest_reader"
        "about"
    REQUIRES
        arfi_core
        arfi_services
        arfi_ui
        esp_partition
        esp_timer
        json
)
